# AgentMove-Public

./: .env.example  .gitignore  README.md  agent.py  config.py  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  utils.py
app/: README.md  __init__.py  requirements.txt  start_demo.sh  test_demo.py  test_demo_predict.py  test_error_handling.py
app/backend/: api.py  config.py  demo_agent.py
app/docs/: ERROR_HANDLING.md
app/frontend/: index.html
app/frontend/static/css/: style.css
app/frontend/static/js/: main.js
docs/: ENV_MIGRATION.md
evaluate/: __init__.py  evaluations.py
models/: __init__.py  llm_api.py  personal_memory.py  world_model.py
processing/: __init__.py  data.py  osm_address_deploy.py  osm_address_web.py  process_fsq_city_data.py  process_isp_shanghai.py  trajectory_address_match.py
